Deployment-UserUpdater.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-pidgtm-user-updater
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pidgtm
  template:
    metadata:
      labels:
        app: pidgtm
    spec:
      containers:
      - name: pidgtm
        image: danstaken/pidgtm-user-updater:latest
        args: ["update"]
