frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: danstaken/smithe-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      nodeSelector:
        node: rpileaf01
