pidgtm-map-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-pidgtm-map
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pidgtm
  template:
    metadata:
      labels:
        app: pidgtm
    spec:
      containers:
        - name: pidgtm
          image: danstaken/pidgtm:latest
          imagePullPolicy: Always
          args: ["map"]
