backend-ingress-do.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - danbugsserver.com
    secretName: danbugsserver-tls
  rules:
  - host: danbugsserver.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
